globus-gatekeeper (10.1-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 14 Feb 2014 18:19:30 -0500

globus-gatekeeper (10.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Thu, 23 Jan 2014 09:16:52 -0500

globus-gatekeeper (9.15-1) unstable; urgency=low

  * GT-354: Compatibility with automake 1.13

 -- Globus Toolkit <support@globus.org>  Mon, 18 Mar 2013 09:58:27 -0400

globus-gatekeeper (9.14-2) unstable; urgency=low

  * 5.2.3

 -- Globus Toolkit <support@globus.org>  Mon, 26 Nov 2012 11:25:52 -0500

globus-gatekeeper (9.14-1) unstable; urgency=low

  * GT-253: gatekeeper and job manager don't build on hurd

 -- Globus Toolkit <support@globus.org>  Tue, 17 Jul 2012 13:50:23 -0400

globus-gatekeeper (9.13-1) unstable; urgency=low

  * GT-205: gatekeeper should log a message when it exits due to the presence of /etc/nologin

 -- Globus Toolkit <support@globus.org>  Thu, 24 May 2012 12:53:08 -0400

globus-gatekeeper (9.12-2) unstable; urgency=low

  * Work around issues caused by previous patch

 -- Globus Toolkit <support@globus.org>  Tue, 15 May 2012 12:56:54 -0400

globus-gatekeeper (9.12-1) unstable; urgency=low

  * GT-159: globus-gatekeeper init script should report errors better

 -- Globus Toolkit <support@globus.org>  Mon, 14 May 2012 10:25:35 -0400

globus-gatekeeper (9.11-1) unstable; urgency=low

  * RIC-258: Can't rely on MKDIR_P

 -- Globus Toolkit <support@globus.org>  Fri, 13 Apr 2012 08:44:21 -0400

globus-gatekeeper (9.10-1) unstable; urgency=low

  * GRAM-335: init scripts fail on solaris because of stop alias
  * RIC-205: Missing directories $GLOBUS_LOCATION/var/lock and $GLOBUS_LOCATION/var/run

 -- Globus Toolkit <support@globus.org>  Fri, 06 Apr 2012 09:51:19 -0400

globus-gatekeeper (9.9-1) unstable; urgency=low

  * GRAM-303: Gatekeeper's syslog output cannot be controlled