@@ -1,3 +1,9 @@
+globus-gatekeeper (10.2-1+gt6.@distro@) @distro@; urgency=low
+
+  * Packaging fixes
+
+ -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 13:35:41 -0500
+
 globus-gatekeeper (10.1-1+gt6.@distro@) @distro@; urgency=low
 
   * Packaging fixes
